# scrum-planning-ai-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SCRUM.md.example  TELEMETRY.md  TODO.md  pyproject.toml  skills
.github/workflows/: auto-tag.yml  ci.yml  publish.yml  smoke.yml
docs/: BUSINESS_PROPOSAL.md
sample_projects/datadog_bits/: datadog-bits-ai-sre-plan.html  datadog-bits-ai-sre-plan.md
sample_projects/datadog_workflow/: datadog-eks-automation-plan.html  datadog-eks-automation-plan.md
scripts/: generate_graph_png.py  seed_mock_data.py
skills/scrum-planner/: README.md  SKILL.md
skills/scrum-planner/references/: cli-and-generation.md  output-and-review.md
skills/scrum-planner/scripts/: canvas.py  canvas_push.py
src/scrum_agent/: __init__.py  azdevops_sync.py  cli.py  config.py  formatters.py  html_exporter.py  input_guardrails.py  jira_sync.py  json_exporter.py  output_guardrails.py  paths.py  persistence.py  questionnaire_io.py  sessions.py  setup_wizard.py  team_profile.py  team_profile_exporter.py  telemetry.py
src/scrum_agent/agent/: __init__.py  graph.py  llm.py  nodes.py  state.py
src/scrum_agent/prompts/: __init__.py  analyzer.py  epic_generator.py  (+5 more)
tests/: _node_helpers.py  conftest.py  test_accordion.py  test_mode_select.py  test_persistence.py  test_session.py  test_splash.py
tests/contract/: test_azure_devops_contract.py  test_confluence_contract.py  test_github_contract.py  test_jira_contract.py  test_llm_provider_contract.py  test_schema_validation.py
tests/fixtures/: SCRUM.md  scrum-questionnaire-answers.md
tests/golden/: conftest.py  datasets.py  test_golden.py
tests/integration/: conftest.py  test_cli.py  test_e2e_graph.py  test_e2e_repl.py  test_graph.py  test_graph_topology.py  test_integration.py  test_react_loop.py  test_repl.py  test_sessions.py
tests/smoke/: conftest.py  test_smoke.py
tests/unit/: test_analysis_generation.py  test_analysis_screens.py  test_analysis_sessions.py  test_azdevops_sync.py  test_config.py  test_fixtures.py  test_formatters.py  test_jira_sync.py  test_json_exporter.py  test_llm.py  test_questionnaire_io.py  test_setup_wizard.py  test_shared_components.py  test_state.py  test_team_profile.py  test_token_budgets.py
(+101 files in other folders)
